# backend/router/router.go
@@ -4,7 +4,6 @@ import (
 	"backend/handlers"
 	authHandlers "backend/handlers/auth"
 	todoHandlers "backend/handlers/todo"
-	userHandlers "backend/handlers/user"
 	"backend/middleware"
 
 	"github.com/gorilla/mux"
@@ -15,17 +14,11 @@ func Router() *mux.Router {
 	r.HandleFunc("/api/resource", handlers.GetResource).Methods("GET")
 	r.HandleFunc("/api/resource", handlers.CreateResource).Methods("POST")
 
-	//todo routes
-	r.HandleFunc("/api/todos", todoHandlers.GetAllTodos).Methods("GET")
-
 	r.HandleFunc("/api/todo", middleware.VerifyToken(todoHandlers.CreateTodoHandler)).Methods("POST")
 	r.HandleFunc("/api/user/todos", middleware.VerifyToken(todoHandlers.GetTodoByUserId)).Methods("GET")
 	r.HandleFunc("/api/todo/{todoId}", middleware.VerifyToken(todoHandlers.DeleteTodoHandler)).Methods("DELETE")
 	r.HandleFunc("/api/todo/{todoId}", middleware.VerifyToken(todoHandlers.UpdateTodoHandler)).Methods("PUT")
-	r.HandleFunc("/api/todo/mark-complete/{todoId}", middleware.VerifyToken(todoHandlers.MarkTodoAsCompleteHandler)).Methods("PUT")
-
-	//user routes
-	r.HandleFunc("/api/users", userHandlers.GetAllUsers).Methods("GET")
+	r.HandleFunc("/api/todo/{todoId}/complete", middleware.VerifyToken(todoHandlers.MarkTodoAsCompleteHandler)).Methods("PUT")
 
 	// auth routes
 	r.HandleFunc("/api/auth/login", authHandlers.Login).Methods("POST")
